<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Anime Bracket</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_brackets">Current Brackets</string>
    <string name="past_brackets">Past Brackets</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="voting_as">Voting as:</string>
    <string name="log_in">Log in</string>
    <string name="accept_rules">This seems fair. Take me to the form</string>
    <string name="character_nomination">Character Nomination</string>
    <string name="character_name">Character name:</string>
    <string name="source">Source:</string>
    <string name="link_to_picture">Link to Picture:</string>
    <string name="nominate">Nominate</string>
    <string name="false_text">false</string>
    <string name="empty_string" />
    <string name="vs">vs</string>
</resources>
