<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize" />
        </android.support.design.widget.AppBarLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/nav_drawer"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorPrimaryDark"
        android:clickable="false"
        android:divider="@android:color/transparent"
        android:elevation="16dp"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:translationZ="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="top"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/voting_as_text_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="16dp"
                android:text="@string/voting_as"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/reddit_username_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="openReddit"
                android:paddingLeft="20dp"
                android:text="@string/log_in"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/abc_search_url_text" />
        </LinearLayout>

        <Button
            android:id="@+id/textView4"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:onClick="onCurrentBracketClick"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/current_brackets"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/textView5"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/past_brackets"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1000" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:onClick="logOut"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/logout"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/textView6"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:onClick="openSettings"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/settings"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
</android.support.v4.widget.DrawerLayout>
